[project]
name = "sublime-text-4-patcher"
version = "0.1.0"
description = "Python 3 patcher for Sublime Text v4107-4205 Windows x64"
authors = ["rainbowpigeon <113040852+rainbowpigeon@users.noreply.github.com>"]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.9"
dependencies = [
    "pefile==2024.8.26",
]

[dependency-groups]
dev = [{include-group = "lint"}]
lint = ["ruff", "ty"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # pydocstyle
    "COM812",   # trailing comma (formatter conflict)
    "ISC001",   # string concat (formatter conflict)
    "TD002",
    "TD003",
    "FIX002",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.9"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"
